Fixed Overflow Issue

--- a/Header.css
+++ b/Header.css
@@ -19,8 +19,6 @@ body{
    background: #232027;
    padding-top: 20px;
    padding-bottom: 20px;
-   padding-left: 10px;
-   padding-right: 10px;
    justify-content: space-evenly;
    width: 100%;
 }
